# Unix-Programming

./: .gitignore
Mini_os/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  data.txt  log.txt  main.cpp  mem_map.cpp  process_management.cpp  schedular.cpp  shell.cpp
Mini_os/include/: PCB.h  global_files.h  mem_map.h  my_commands.h  process_management.h  scheduler.h  shell.h
Mini_os/proc/: client.c  play_music.c  producer_consumer.cpp  server.c
Mini_os/scripts/: affect.sh  hardware_info.sh  init.py  my_commands.cpp  special_pattern.sh  user_info.sh
Unix Special Files/: pipeline.c
Unix Special Files/client_server_using_fifo/: README.md  client.c  server.c
memory_management/: data.txt  mmap.c
mmap/: file_to_mem_mapping.c
process_and_threads/: README.md  multithreaded_sort.c
signal_handling/: child_signals_parent.c
syncronization_techniques/: reader_writer_problem_semaphore.c
